cloud/w10/day-b/signing/require-signed-images.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-signed-ghcr-images
  labels:
    owner: platform-team
spec:
  validationFailureAction: Enforce
  background: false
  webhookConfiguration:
    failurePolicy: Fail
    timeoutSeconds: 30
  rules:
    - name: verify-w10-ghcr-signatures
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - w10-supply-chain-lab
      verifyImages:
        - imageReferences:
            - ghcr.io/minhkhoa2209/*
          failureAction: Enforce
          mutateDigest: true
          required: true
          verifyDigest: true
          attestors:
            - count: 1
              entries:
                - keyless:
                    subject: https://github.com/MinhKhoa2209/minhkhoa-aws-accelerator-p2/.github/workflows/trivy-cosign.yml@refs/heads/main
                    issuer: https://token.actions.githubusercontent.com
                    rekor:
                      url: https://rekor.sigstore.dev
